[gd_scene load_steps=7 format=2]

[ext_resource path="res://Scripts/Menu.gd" type="Script" id=1]
[ext_resource path="res://Assets/default.tres" type="DynamicFont" id=2]
[ext_resource path="res://Assets/light.jpeg" type="Texture" id=3]
[ext_resource path="res://BG.tscn" type="PackedScene" id=4]
[ext_resource path="res://Assets/homespun.ttf" type="DynamicFontData" id=5]

[sub_resource type="DynamicFont" id=1]
size = 75
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 5 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -154.0
margin_top = 46.0
margin_right = 156.0
margin_bottom = 122.0
grow_horizontal = 2
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 1 )
text = "Awesome"

[node name="Buttons" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -48.5
margin_top = -28.0
margin_right = 48.5
margin_bottom = 28.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="Play" type="Button" parent="Buttons"]
margin_right = 542.0
margin_bottom = 56.0
custom_fonts/font = ExtResource( 2 )
text = "Play"

[node name="Profile" type="Button" parent="Buttons"]
margin_top = 60.0
margin_right = 542.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
text = "Profile & Customization"

[node name="Settings" type="Button" parent="Buttons"]
visible = false
margin_top = 120.0
margin_right = 542.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 2 )
text = "Settings"

[node name="Info" type="Button" parent="Buttons"]
margin_top = 120.0
margin_right = 542.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 2 )
text = "Info & Controls"

[node name="Credits" type="Button" parent="Buttons"]
margin_top = 180.0
margin_right = 542.0
margin_bottom = 236.0
custom_fonts/font = ExtResource( 2 )
text = "Credits"

[node name="Light2D" type="Light2D" parent="."]
position = Vector2( 516, 306 )
texture = ExtResource( 3 )
energy = 0.36

[node name="Light2D2" type="Light2D" parent="."]
position = Vector2( 517, 77 )
texture = ExtResource( 3 )
energy = 0.36

[node name="BG" parent="." instance=ExtResource( 4 )]

[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Profile" to="." method="_on_Profile_pressed"]
[connection signal="pressed" from="Buttons/Settings" to="." method="_on_Settings_pressed"]
[connection signal="pressed" from="Buttons/Info" to="." method="_on_Info_pressed"]
[connection signal="pressed" from="Buttons/Credits" to="." method="_on_Credits_pressed"]
