extends Control

func _on_Play_pressed():
	Global.changeScene("Loading")
func _on_Profile_pressed():
	Global.changeScene("Profile")
func _on_Settings_pressed():
	Global.changeScene("Settings")
func _on_Info_pressed():
	Global.changeScene("Info")
func _on_Credits_pressed():
	Global.changeScene("Credits")
